swagger, category, vendor, customer modify
